# beacon

./: Dockerfile  README.md  app.py  causal.py  config.toml  data.py  pyproject.toml  requirements.txt
data/: WPU081.csv
models/: model.joblib
